Upgrade java version.